--- a/GrassTesting/Views/_ViewImports.cshtml
+++ b/GrassTesting/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using GrassTesting
-@namespace GrassTesting.Pages
+﻿@using GrassTesting
+@using GrassTesting.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
